Add the files part and all upadted file